@@ -69,6 +69,7 @@ Template for new versions:
 
 ## Lua
 - ``widgets.Label``: ``text_pen``, ``text_dpen``, and ``text_hpen`` can either be a pen or a function that dynamically returns a pen
+- `helpdb`: ``search_entries`` now returns a match if *all* filters in the ``include`` list are matched. previous behavior was to match if *any* ``include`` filter matched.
 
 ## Removed
 
